# AMR_EDU

./: .zsh_history  README.md  pm2-expressone.service
expressone/: checktf.zsh  come_here.zsh  disable.zsh  enable-x11-gpu.sh  enable.zsh  fix_imu.sh  goto.zsh  mapping.zsh  nav.zsh  ok.zsh  reloc_dock.zsh  reloc_manual.zsh  reloc_status.zsh  rmgit.zsh  savemap.zsh  set_initial_pose.zsh  start_canopen.sh  start_hls_canopen.sh  start_imu.sh  start_lights.sh  start_power.sh  start_ultrasonic.sh  stop_mapping.sh  tf_tree.sh
expressone/ros2_ws/src/canopen_ros2/: Cargo.toml
expressone/ros2_ws/src/canopen_ros2/src/: main.rs
expressone/ros2_ws/src/dyp_a21_ultrasonic_cpp/: CMakeLists.txt  package.xml
expressone/ros2_ws/src/dyp_a21_ultrasonic_cpp/config/: params.yaml
expressone/ros2_ws/src/dyp_a21_ultrasonic_cpp/launch/: ultrasonic.launch.py
expressone/ros2_ws/src/dyp_a21_ultrasonic_cpp/src/: ultrasonic_node.cpp
expressone/ros2_ws/src/exp2_description/: CMakeLists.txt  package.xml
expressone/ros2_ws/src/exp2_description/launch/: description.launch.py
expressone/ros2_ws/src/exp2_description/urdf/: exp2.urdf.xacro
expressone/ros2_ws/src/exp2_lights/: CMakeLists.txt  Makefile  README.md  all_on.c  lights.c  lights.h  package.xml  test_lights  test_lights.c
expressone/ros2_ws/src/exp2_lights_bridge/: CMakeLists.txt  lights_client.py  package.xml
expressone/ros2_ws/src/exp2_lights_bridge/include/: lights_client.hpp
expressone/ros2_ws/src/exp2_lights_bridge/src/: lights_bridge.cpp
expressone/ros2_ws/src/exp2_nav/: .gitignore  CMakeLists.txt  package.xml
expressone/ros2_ws/src/exp2_nav/config/: .改动清单.md.swp  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params.yaml.bak  改动清单.md
expressone/ros2_ws/src/exp2_nav/launch/: mapping.launch.py  navigation.launch.py
expressone/ros2_ws/src/exp2_nav/rviz/: exp2.rviz
expressone/ros2_ws/src/exp2_nav/scripts/: reloc_manager.py  reloc_manager.py.bak  scan_matcher.py
expressone/ros2_ws/src/hls_canopen/: CLI_USAGE.md  Cargo.toml  ws_ctl.js
expressone/ros2_ws/src/hls_canopen/.hermes/plans/: 2026-05-23_000000-rust-ros2-libraries-comparison.md  2026-05-23_140000-cmd-vel-interface.md  2026-05-23_150000-websocket-library-selection.md  2026-05-23_160000-nav2-odom-tf.md  2026-05-26_131500-hls-ros2-bridge.md  2026-05-26_132000-canopen-ros2.md
expressone/ros2_ws/src/hls_canopen/scripts/: calibrate_wheelbase.py  test_straight_line.py
expressone/ros2_ws/src/hls_canopen/src/: can_driver.rs  can_setup.rs  kinematics.rs  lib.rs  main.rs  motor.rs  sdo_client.rs
expressone/ros2_ws/src/imu_4/: CMakeLists.txt  package.xml  setup_uart4.sh
expressone/ros2_ws/src/imu_4/config/: hi12_params.yaml
expressone/ros2_ws/src/imu_4/include/hi12_imu/: protocol.hpp  serial_port.hpp
expressone/ros2_ws/src/imu_4/launch/: hi12_imu.launch.py
expressone/ros2_ws/src/imu_4/src/: hi12_driver.cpp  hi12_driver.hpp  hi12_node.cpp  protocol.cpp  serial_port.cpp
expressone/ros2_ws/src/keli_lidar/: Cargo.toml  README.md
expressone/ros2_ws/src/keli_lidar/launch/: keli_lidar.launch.py
expressone/ros2_ws/src/keli_lidar/src/: main.rs  transport.rs
expressone/ros2_ws/src/keli_lidar/src/protocol/: constants.rs  frame.rs  ls1207de_parser.rs  mod.rs
expressone/ros2_ws/src/power_monitor/: CMakeLists.txt  package.xml
expressone/ros2_ws/src/power_monitor/include/power_monitor/: battery_protocol.hpp  can_reader.hpp  mqtt_publisher.hpp
expressone/ros2_ws/src/power_monitor/src/: battery_protocol.cpp  can_reader.cpp  mqtt_publisher.cpp  power_monitor_node.cpp
expressone/scripts/: start_ekf.sh
资料/: EXP2导航参数优化记录.md  EXP2导航系统工作原理.md  deadlock_doc.html  embedded-debugging-methodology.md  exp2-imu-使用说明书.md  exp2-lights-使用说明书.md  exp2-power-monitor-使用说明书.md  exp2-robot-architecture.md  exp2-ultrasonic-使用说明书.md  exp2-定位漂移-TF冲突修复.md  exp2_nav_算法文档.md  reloc-manager-summary.md  快递运送智能小车技术需求说明书（与人形机器人协同赛项）.docx  电机通信问题的排查与解决.docx  电池监控系统充电状态检测功能开发.docx  资料整理.html
