[package]
name = "canopen_ros2"
version = "0.1.0"
edition = "2021"

[dependencies]
r2r = "0.9"
tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

# ARM SBC: compile deps at opt-level=1, way faster, low mem
[profile.release.package."*"]
opt-level = 1
