<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dyp_a21_ultrasonic_cpp</name>
  <version>0.1.0</version>
  <description>ROS2 C++ CAN driver for DYP-A21 ultrasonic distance sensors</description>
  <maintainer email="expressone@orangepi.local">expressone</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
