<?xml version="1.0"?>
<package format="3">
  <name>exp2_lights</name>
  <version>2.0.0</version>
  <description>EXP2 car light GPIO control with per-position color mutex</description>
  <maintainer email="luzhuo@example.com">luzhuo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
