<?xml version="1.0"?>
<package format="3">
  <name>exp2_lights_bridge</name>
  <version>2.0.0</version>
  <description>ROS2 bridge for EXP2 car lights with per-position color mutex</description>
  <maintainer email="luzhuo@example.com">luzhuo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>exp2_lights</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
