[package]
name = "hls_canopen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hls_canopen"
path = "src/main.rs"

[[bin]]
name = "hls_cli"
path = "src/bin/hls_cli.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socketcan = "3"
tungstenite = "0.26"
