<?xml version="1.0"?>
<package format="3">
  <name>hi12_imu</name>
  <version>1.0.0</version>
  <description>
    ROS2 driver for Hipnuc HI12 MEMS IMU/VRU/AHRS sensor over UART serial.
    Parses the Hipnuc binary protocol and publishes sensor_msgs/Imu.
  </description>
  <maintainer email="user@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
