<?xml version="1.0"?>
<package format="3">
  <name>power_monitor</name>
  <version>1.0.0</version>
  <description>
    ROS2 battery monitor node that reads BMS data from CAN bus (SocketCAN)
    and publishes battery state-of-charge over MQTT to /car/power.
  </description>
  <maintainer email="user@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
